# gsplat

examples/: gradcheck.py  playground.py  playground2.py  playground_rasterization_wrapper.py  reproduce_pgsr.py  simple_trainer.py  simple_trainer_2dgs.py  single_splat.py  small_function.py
gsplat/: __init__.py  rasterize.py  rendering.py  utils.py
gsplat/cuda/: _wrapper.py
gsplat/cuda/csrc/: CMakeLists.txt  Session.vim  auxiliary.h  backward.cu  backward.cuh  bindings.cu  bindings.h  ext.cpp  forward.cu  forward.cuh  fully_fused_projection_bwd.cu  fully_fused_projection_fwd.cu  fully_fused_projection_radegs_bwd.cu  fully_fused_projection_radegs_fwd.cu  rasterize.cu  rasterize.h  rasterize_to_pixels_bwd.cu  rasterize_to_pixels_fwd.cu  rasterize_to_pixels_rade_fwd.cu  rasterize_to_pixels_radegs_bwd.cu  test.cpp  utils.cuh
gsplat/strategy/: default.py
main/.doctrees/: environment.pickle
